--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -12,6 +12,9 @@
       Ao se inscrever, você será convidado para nossa sala no&nbsp;
       %a(href="http://slack.com" target="_blank")> Slack
       \.
+
+    %p.signup-form-success= notice
+
     = form_for @member, html: { class: 'signup-form' } do |f|
       - if @member.errors.any?
         %p.validation-error
@@ -22,12 +25,12 @@
         %div
           = f.label :name
           %br
-          = f.text_field :name
+          = f.text_field :name, required: true
         %div
           = f.label :email
           %label
           %br
-          = f.email_field :email
+          = f.email_field :email, required: true
       %fieldset
         %input(type="submit" value="Quero Participar")
     %p.member-section
