--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,8 +3,9 @@
   %head
     %title Ruby Talk - Chat da comunidade Ruby e Rails
     %meta(name="viewport" content="width=device-width, initial-scale=1")
-    = stylesheet_link_tag    'application', media: 'all'
-    = javascript_include_tag 'application'
+    = favicon_link_tag "favicon.png"
+    = stylesheet_link_tag "application"
+    = javascript_include_tag "application"
     = csrf_meta_tags
 
   %body
