Improve error messages, improve layout DOM

--- a/app/assets/stylesheets/members.sass
+++ b/app/assets/stylesheets/members.sass
@@ -116,6 +116,7 @@ a
     outline: none
     padding: .5em
     width: 100%
+    -webkit-appearance: none
 
     &:hover,
     &:focus
@@ -131,8 +132,9 @@ a
 .validation-error
   background-color: $yellow
   border-radius: 4px
-  padding: .5em 1em
+  list-style: square inside
   margin: 0 0 1em
+  padding: .5em 1em
 
 
 // Member Section
@@ -151,6 +153,7 @@ a
 
   a
     color: $gray
+
 
 // Default rails errors
 
