--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
         %h1.title Ruby Talk
         %p.subtitle Chat da comunidade Ruby e Rails
 
-    = yield
+    %section.content= yield
 
     %footer.site-footer
       %div.wrapper
