--- a/app/assets/stylesheets/members.sass
+++ b/app/assets/stylesheets/members.sass
@@ -7,6 +7,7 @@ $light: #ddd
 $white: #fff
 $red: #b02b2c
 $yellow: #f8e71c
+$green: #b8e986
 
 @import url(http://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic,500,500italic,700,700italic,900,900italic)
 $font: Roboto, sans-serif
@@ -133,6 +134,15 @@ a
   background-color: $yellow
   border-radius: 4px
   list-style: square inside
+  margin: 0 0 1em
+  padding: .5em 1em
+
+
+// Signup Success
+
+.signup-form-success
+  background-color: $green
+  border-radius: 4px
   margin: 0 0 1em
   padding: .5em 1em
 
