--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -14,6 +14,10 @@
 
   = form_for @member, html: { class: 'signup-form' } do |f|
 
+    - if alert
+      %ul.validation-error
+        %li= alert
+
     - if @member.errors.any?
       %ul.validation-error
         - @member.errors.full_messages.each do |message|
