Link credits to GitHub orgs because DNS hates us

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
       %div.wrapper
         %p
           Uma iniciativa
-          %a(href="http://standardcode.com.br" target="_blank") Standard Code
+          %a(href="https://github.com/standard-code" target="_blank") Standard Code
           e&nbsp;
-          %a(href="http://current.com.br" target="_blank")> Current
+          %a(href="https://github.com/current" target="_blank")> Current
           \.
