Add link to GitHub repo

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,3 +25,6 @@
           e&nbsp;
           %a(href="https://github.com/current" target="_blank")> Current
           \.
+          Contribua no&nbsp;
+          %a(href="https://github.com/jonduarte/rubytalk")> GitHub
+          \.
