Add media queries for smaller mobile screens

--- a/app/assets/stylesheets/members.sass
+++ b/app/assets/stylesheets/members.sass
@@ -169,3 +169,30 @@ a
 
 .field_with_errors
   display: inline
+
+
+// Media Queries
+
+// iPhone 6
+
+@media only screen and (max-device-width: 375px)
+
+  .hero
+
+    .title
+      font-size: 2.6em
+
+    .subtitle
+      font-size: 1.2em
+
+// iPhone 5 and below
+
+@media only screen and (max-device-width: 320px)
+
+  .hero
+
+    .title
+      font-size: 2.4em
+
+    .subtitle
+      font-size: 1em
