--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -41,3 +41,12 @@
   %p.member-section
     Já faz parte?
     %a(href="https://rubytalk.slack.com/" target="_blank") Acesse o Chat
+
+  -# TODO: Make this work
+  %section.stats
+    %div.entry
+      %strong.number 100
+      %span.name membros
+    %div.entry
+      %strong.number 1200
+      %span.name mensagens
