--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -45,8 +45,8 @@
   -# TODO: Make this work
   %section.stats
     %div.entry
-      %strong.number 100
+      %strong.number 140+
       %span.name membros
     %div.entry
-      %strong.number 1200
+      %strong.number 2500+
       %span.name mensagens
