--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,10 +20,10 @@
     %footer.site-footer
       %div.wrapper
         %p
-          Uma iniciativa
-          %a(href="https://github.com/standard-code" target="_blank") Standard Code
+          Criado e mantido por
+          %a(href="https://github.com/jonduarte" target="_blank") @jonduarte
           e&nbsp;
-          %a(href="https://github.com/current" target="_blank")> Current
+          %a(href="https://github.com/rmasoni" target="_blank")> @rmasoni
           \.
           Contribua no&nbsp;
           %a(href="https://github.com/jonduarte/rubytalk")> GitHub
