--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,17 +3,34 @@
   %head
     %title Ruby Talk - Chat da comunidade Ruby e Rails
     %meta(name="viewport" content="width=device-width, initial-scale=1")
+    %meta(name="environment" content="#{Rails.env}")
     = favicon_link_tag "favicon.png"
     = stylesheet_link_tag "application"
-    = javascript_include_tag "application"
     = csrf_meta_tags
 
-  %body
+  %body{ class: "#{controller_name} #{action_name}" }
+    :javascript
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-75045309-4', 'auto');
+      ga('send', 'pageview');
+
+
+
     %header.hero
-      %div.wrapper
+      = link_to root_path do
         = image_tag "logo-white.svg", class: 'logo', alt: "Ruby Talk Logo"
         %h1.title Ruby Talk
-        %p.subtitle Chat da comunidade Ruby e Rails
+
+      %ul{ data: { toggle: "track", category: "Menu" } }
+        %li= link_to "Cursos", "#"
+        %li= link_to "Vídeo aulas", "#"
+        %li= link_to "Tutoriais", "#"
+        %li= link_to "Comunidade", new_member_path
+
 
     %section.content= yield
 
@@ -28,3 +45,5 @@
           Contribua no&nbsp;
           %a(href="https://github.com/jonduarte/rubytalk")> GitHub
           \.
+
+    = javascript_include_tag "application"
