--- a/app/assets/stylesheets/members.sass
+++ b/app/assets/stylesheets/members.sass
@@ -128,6 +128,10 @@ a
       background-color: scale-color($red, $lightness: -10%)
       box-shadow: inset 0 4px 4px rgba($black, .3)
 
+.captcha-container
+  display: flex
+  justify-content: center
+  padding-bottom: 1em
 
 // Validation Error
 
